<resources>
    <string name="app_name">Indian Cosmetics BD</string>
    <string name="retry">Retry</string>
    <string name="retry_text">Oops! Retry to load</string>
    <string name="toolbar_main">Indian Cosmetics BD</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="our_categories">Our Categories</string>
    <string name="categories">Categories</string>
    <string name="category_name">The Soumi\'s Can Products</string>
    <string name="switch_theme">SWITCH THEME</string>
    <string name="product_click">slimming products</string>
    <string name="no_data">No Data Available</string>
    <string name="no_products">No Products Available</string>
    <string name="product_list_name">Tetra Skin Whitening Conditioner</string>
    <string name="product_brand_name">by The Soumi\'s Can Product</string>
    <string name="product_price">250৳</string>
    <string name="product_stock">250pc Left</string>
    <string name="product_view">170</string>
    <string name="home">Home</string>
    <string name="wishList">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="nav_user_text">User Name</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_send_us_review">Send Us Review</string>
    <string name="nav_helpline">Helpline</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms &amp; Conditions</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="email">Enter Email or Phone Number</string>
    <string name="password">Enter Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="gotoRegister">DON\'T HAVE ACCOUNT? REGISTER</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Enter Address</string>
    <string name="city">Enter City</string>
    <string name="district">Enter District</string>
    <string name="postalCode">Enter Postal Code</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="mobileNumber">Enter Mobile Number</string>
    <string name="gotoSignIn">ALREADY HAVE AN ACCOUNT? SIGN IN</string>
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_mobile">Mobile</string>
    <string name="account_address">Address</string>
    <string name="logout">Log Out</string>
    <string name="lorem_ipsum">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="product_details_brand">Beauty Breast Milk Lotion</string>
    <string name="product_details_name">Beauty Breast Milk Lotion</string>
    <string name="product_details_price">1500tk</string>
    <string name="product_details_stock">100 pc</string>
    <string name="product_details_discount">100tk</string>
    <string name="product_details_total_views">100</string>
    <string name="product_details_rating">(0)</string>
    <string name="product_details_description_name">Description</string>
    <string name="product_details_description">আপনার ব্রেস্ট হবে বড় , টাইট এবং ব্রাইট।</string>
    <string name="product_details_size">Size</string>
    <string name="product_details_size_example">200 ml</string>
    <string name="color_name_1">Red</string>
    <string name="color_name_2">Yellow</string>
    <string name="color_name_3">Black</string>
    <string name="color_name_4">Blue</string>
    <string name="color_name_5">Magenta</string>
    <string name="color_name_6">Green</string>
    <string name="color_name_7">Pink</string>
    <string name="color_name_8">Sky Blue</string>
    <string name="color_name_9">Orange</string>
    <string name="reviews">Ratings and Reviews</string>
    <string name="rating_demo">4.5</string>
    <string name="demo_user">User Name</string>
    <string name="demo_date">2021-05-19</string>
    <string name="demo_description">This is a good product. Recommended.</string>
    <string name="demo_mail">test2@gmail.com</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="tk">৳</string>
    <string name="product_quantity">1</string>
    <string name="snackbar_text">Cart Added</string>
    <string name="snackbar_text_updated">Cart Updated</string>
    <string name="continue_cart">Continue Shopping</string>
    <string name="cart_price">৳1200 x 1</string>
    <string name="cart_price_after_discount">৳1000</string>
    <string name="cart_price_discount"><strike>৳200</strike></string>
    <string name="total">Total: </string>
    <string name="checkout">Checkout</string>
    <string name="cart_total">৳12000</string>
    <string name="cart_empty">Nothing is added to shopping cart</string>
    <string name="wishlist_empty">Nothing is added to wishlist</string>
    <string name="search">Search</string>
    <string name="search_text">Search by Product or Brand name</string>
    <string name="search_error">No Search Item Found</string>
    <string name="view_all">View All</string>
    <string name="exit_dialog">Do you want to exit the app?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="number_dialog">Tap and hold one of the numbers to call</string>
    <string name="notification_toolbar">Notification</string>
    <string name="no_notification">No notification available</string>
    <string name="no_order">No order available</string>
    <string name="notificationType">Order</string>
    <string name="notifications">Your order #56768 is now in processing.</string>
    <string name="order_toolbar">Orders</string>
    <string name="order_no">Order no: 56768</string>
    <string name="forgot_password_text">Enter your email address</string>
    <string name="confirmation_message">A recovery mail has been sent to your email address. Please check in your inbox/spam folder.</string>
    <string name="submit">Submit</string>
    <string name="error_forgot">Error Occurred</string>
    <string name="view_orders">Orders</string>
    <string name="order_submit">Order Details</string>
    <string name="product_list">List of products</string>
    <string name="user_name">Muhammad Zubaer Bin Ibne Alam Bihim</string>
    <string name="user_phone">01911000000</string>
    <string name="user_phone_text">Phone</string>
    <string name="user_address_text">Delivery Address</string>
    <string name="user_address">Secor 9, Uttara, Dhaka, Bangladesh, Noakhali, Chittagong</string>
    <string name="total_amount">Total Amount</string>
    <string name="delivery_amount">Delivery Cost</string>
    <string name="total_tk">1200tk</string>
    <string name="bkash">Bkash Payment</string>
    <string name="cod">Cash On Delivery</string>
    <string name="delivery_text">Dhaka City- 6 to 48 hours. Outside Dhaka- 24 to 96 hours.</string>
    <string name="order_confirmation">Order has taken successfully</string>
    <string name="bkash_phone">Enter Bkash Wallet Number</string>
    <string name="trnx_id">Enter Payment Transaction ID</string>
    <string name="bkash_instruction">Step 1: Go to bKash account menu by dialing *247#\nStep 2: Choose option 1 (Send Money)\nStep 3: Enter bkash account number %1$s\nStep 4: Enter amount %2$s\nStep 5: Enter reference (Eg: your name)\nStep 5: Enter pin to confirm your payment</string>
    <string name="order_status_name">Order Status</string>
    <string name="delivery_date_text">1st May, 2021 (12:45PM)</string>
    <string name="delivery_date">Order Date</string>
    <string name="content_description">This is content description</string>
    <string name="payment_type_text">Payment Type</string>
    <string name="payment_type">Cash on delivery</string>
    <string name="payment_status">Unverified</string>
    <string name="payment_status_text">Payment Status</string>
    <string name="payment_trxn_id_text">Payment Transaction</string>
    <string name="payment_trxn_id">TxSer31Sasfgdas</string>
    <string name="print">Print Invoice</string>
    <string name="payment_info">Payment Information</string>
    <string name="order_status">Order Status</string>
    <string name="status">Info: </string>
    <string name="status3">Not Seen Yet</string>
    <string name="status2">Your order is not seen yet by any admin!</string>
    <string name="products">Products</string>
    <string name="inside_dhaka">Inside Dhaka City</string>
</resources>