<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?layoutColor"
    android:orientation="vertical"
    tools:context=".Views.Activity.OrderDetailsWithoutAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/toolbarColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:text="@string/order_submit"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/submit_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false"
                        android:padding="@dimen/_12sdp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/order_submit_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:text="@string/user_name"
                                android:textColor="?textViewMainColor"
                                android:textSize="@dimen/_14ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_phone_text"
                                android:textColor="?textViewSecondaryColor"
                                android:textSize="@dimen/_11ssp" />

                            <TextView
                                android:id="@+id/order_submit_phone_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:text="@string/user_phone"
                                android:textColor="?textViewMainColor"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_address_text"
                                android:textColor="?textViewSecondaryColor"
                                android:textSize="@dimen/_11ssp" />

                            <TextView
                                android:id="@+id/order_submit_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_address"
                                android:textColor="?textViewMainColor"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_amount"
                                android:textColor="?textViewSecondaryColor"
                                android:textSize="@dimen/_11ssp" />

                            <TextView
                                android:id="@+id/order_submit_total_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:text="@string/total_tk"
                                android:textColor="?textViewMainColor"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/delivery_amount"
                                android:textColor="?textViewSecondaryColor"
                                android:textSize="@dimen/_11ssp" />

                            <TextView
                                android:id="@+id/order_submit_delivery_cost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_tk"
                                android:textColor="?textViewMainColor"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/product_list"
                    android:textColor="?textViewMainColor"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_submit_list_product_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/recyclerview_order_submit_products" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/submit_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_order_cod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/cod"
                app:backgroundTint="?buttonColor"
                app:cornerRadius="@dimen/_7sdp"
                app:elevation="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_order_bkash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bkash"
                android:layout_weight="1"
                android:textColor="@color/white"
                app:backgroundTint="#DF146E"
                app:cornerRadius="@dimen/_7sdp"
                app:elevation="0dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>