<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_margin="@dimen/_20sdp"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?cardColor"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:text="@string/exit_dialog"
            android:textColor="?textViewMainColor"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_dialog"
                app:backgroundTint="?forgot_password_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/no_dialog"
                app:backgroundTint="?buttonColor"/>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>